After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746058 - font install: previous results not cleared
font install: previous results not cleared
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-03-11 23:11 UTC by Matthias Clasen
Modified: 2015-05-11 10:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2015-03-11 23:11:12 UTC
While playing with font installation (triggering it from gucharmap), I noticed that we

a) Show not activity indication for an ongoing search, although the search can take some time

b) Don't clear the previous unsuccessful search from the ui when a new search is started. This made me think repeatedly that my search had not yielded any results when it was still ongoing - I was looking at the results of the previous search.
Comment 1 Kalev Lember 2015-05-11 10:47:36 UTC
Thanks, both should be fixed by https://git.gnome.org/browse/gnome-software/commit/?id=e1cf4caea890c30f1dddc4387c8730b066da20de