extras: Reset the state to LOADING when starting a new search

This ensures that we clear out any old results and start a spinner each
time a new search comes in.

https://bugzilla.gnome.org/show_bug.cgi?id=746058